电影首页搭建

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,14 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string-array name="tab_names">
+        <item>Trending</item>
+        <item>Popular</item>
+        <item>Played</item>
+        <item>Watched</item>
+        <item>Collected</item>
+        <item>Anticipated</item>
+        <item>Box Office</item>
+    </string-array>
 </resources>
