--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="director">Director:</string>
+    <string name="released">Released:</string>
+    <string name="run_time">Runtime:</string>
+    <string name="language">Language:</string>
 
     <string-array name="tab_names">
         <item>Trending</item>
