--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="comments">Comments</string>
     <string name="see_more">More...</string>
     <string name="crew">Crew</string>
+    <string name="spoiler_alert">This comment has spoiler content.</string>
 
     <string-array name="tab_names">
         <item>Trending</item>
