--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="as_actor">As actor</string>
     <string name="write_external_permission" >We will request write external permission in the following dialog to cache movie poster and actor image,this will greatly improve data load speed.\nYou can also modify this in settings.\nshall we go?
     </string>
+    <string name="comment_tip">Please write in English.</string>
+    <string name="comment_tip1">at least five words.</string>
 
     <string-array name="tab_names">
         <item>Trending</item>
