--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,10 @@
     <string name="comment_tip1">1.at least five words.\n2.write in English.</string>
     <string name="reply_success">Reply success.</string>
     <string name="no_data">No data.</string>
+    <string name="comments_sort_by_newest">Sort by newest</string>
+    <string name="comments_sort_by_oldest">Sort by oldest</string>
+    <string name="comments_sort_by_likes">Sort by likes</string>
+    <string name="comments_sort_by_replies">Sort by replies</string>
 
     <!--<string-array name="tab_names">-->
         <!--<item>Trending</item>-->
