add login check before comment,should work on request error next step

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="comments_sort_by_likes">Sort by likes</string>
     <string name="comments_sort_by_replies">Sort by replies</string>
     <string name="review_tip">Review</string>
+    <string name="not_login">Please login first.</string>
 
     <!--<string-array name="tab_names">-->
         <!--<item>Trending</item>-->
