--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
         <item>Now playing</item>
         <item>Top rated</item>
         <item>Upcoming</item>
+        <item>Trending</item>
     </string-array>
 
     <string-array name="staff_tab_names">
