replace MovieDetailActivity Trakt Rating to Certification or geners

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@
     <string name="under_construction">This is under construction.</string>
     <string name="staff_role">Role</string>
     <string name="sync_state">Syncing data...</string>
+    <string name="certification">Certification</string>
+    <string name="genres">Genres</string>
 
     <string-array name="tab_names">
         <item>Trending</item>
