--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="sync_state">Syncing data...</string>
     <string name="certification">Certification</string>
     <string name="genres">Genres</string>
+    <string name="logging_in">Logging in...</string>
 
     <string-array name="tab_names">
         <item>Trending</item>
