--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="empty_data">No data.</string>
     <string name="no_more_comments">There is no more comments,add one?</string>
     <string name="trailer">Trailer</string>
+    <string name="spoiler">Spoiler</string>
 
     <string-array name="tab_names">
         <item>Trending</item>
